--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.2.45",
     "vue-cookies": "^1.8.2",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.0.3"
+    "vuetify": "^3.0.3",
+    "yahoo-fantasy": "^5.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
