--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,7 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
     "composite": true,
     "baseUrl": ".",
     "paths": {
